My website/*REPL* [python]
  File "/Users/EchoWu/Desktop/My website/index.css", line 2
    .post{
    ^
SyntaxError: invalid syntax
>>> 